kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  labels:
    name: frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
   tls:
   - hosts:
     - shop.34.65.16.175.nip.io
     secretName: shop.34.65.16.175.nip.io
   rules:
   - host: shop.34.65.16.175.nip.io
     http:
       paths:
       - path: /
         backend:
           serviceName: frontend
           servicePort: 8080
